--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
     <title>Flagle</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3993L5KLZ"></script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script>window.googletag=window.googletag||{cmd:[]},googletag.cmd.push((function(){googletag.defineSlot("/18190176,22647288479/MCM_Validation",[1,1],"div-gpt-ad-1614955491295-0").addService(googletag.pubads()),googletag.pubads().enableSingleRequest(),googletag.enableServices()}))</script>
+    <div id="div-gpt-ad-1614955491295-0">
+    <script>googletag.cmd.push((function(){googletag.pubads().isInitialLoadDisabled()?(googletag.display("div-gpt-ad-1614955491295-0"),googletag.refresh("div-gpt-ad-1614955491295-0")):googletag.display("div-gpt-ad-1614955491295-0")}))</script>
+    </div>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
