meta title and description updated

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Guess the hidden country flag in a daily game of Flagle."
+      content="Guess the flag name wordle from every country in the world."
     />
 <!--     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flagle</title>
+    <title>Flagle Game - Daily and Unlimited</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3993L5KLZ"></script>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
